# attempts-to-understand-mcpi

./: .gitignore  README.md  build.sh
doubleStoneSlab/: CMakeLists.txt  doubleStoneSlab.cpp
edibleStoneSlab/: CMakeLists.txt  edibleStoneSlab.cpp
python scripts/: README.md  cuboid.py  line.py  posblockbleow.py  rave.py
